# Torresix

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-publish.yaml  rust.yml
proto/torresix/: torresix.proto
src/: client.rs  server.rs
src/model/: grenade.rs  mobilenet.rs  mod.rs
